# cvcv

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  README.md  env.sh  setup.cfg  setup.py
cvcv/utils/: import_utils.py  md5.py  seed.py  temputils.py  version.py  xserial.py  xtext.py
cvcv/utils/analysis/: excel_tools.py  pd_tools.py  tsne_tools.py
cvcv/utils/multiprocess/: __init__.py  asyncio_utils.py  mp_apply_async.py  mp_imap_unordered.py  mp_map_async.py  thread.py
cvcv/utils/print_utils/: format.py  logger_utils.py
cvcv/utils/profile/: mem.py  torch_statistic.py
cvcv/utils/profile/time/: __init__.py  cost_time.py  time_utils.py
docs/: run.sh
docs/source/: conf.py  index.rst
docs/source/cvcv/: index.rst
docs/source/cvcv/python/: index.rst
docs/source/cvcv/工具类/: docs_sphinx.md  markdown.md
envs/brew/: install.sh
envs/linux/: bashrc  sources_update.sh
envs/mac/: dev_tools_install.sh
envs/pip/: requirement.txt  venv.sh
envs/vscode/: guide_install.md  plugin.md
test/: test_unit_utils.py
test/analysis/: test_excel.py  test_pd.py
test/general_utils/: test_xtext.py
test/import_utils/: test_import_utils.py  test_version.py
test/multiprocess/: test_asyncio.py  test_mp_apply.py  test_mp_imap.py
test/profile/: test_time.py
tuturial/cpp/cmake/conan_opencv_json/: CMakeLists.txt  build.sh  conanfile.txt  data.json  main.cpp  readme.md
tuturial/cpp/cmake/get_start/: run.sh
tuturial/cpp/cmake/get_start_2/: CMakeLists.txt
tuturial/cpp/cmake/get_start_2/src/: hello_cmake.cpp  main.cpp
tuturial/dl/: awesome_dl_tuturial.md
tuturial/dl/aigc/vae/: vae_linear.py
tuturial/dl/base/: conv.py  conv_im2col.py  dropout.py  norm.py
tuturial/dl/base/norm/: norm.md  norm.py  rmsnorm.py  weight_norm.py
tuturial/dl/model/attention_is_all_you_need/: code  model_infer.py  readme.md  requirements.txt
tuturial/py/: contextmanager.py
(+6 files in other folders)
